--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,9 @@
         "fideloper/proxy": "^4.0",
         "laravel/framework": "^6.0",
         "laravel/tinker": "^1.0",
-        "laravel/ui": "^1.0"
+        "laravel/ui": "^1.0",
+       "ext-curl": "*",
+    "authorizenet/authorizenet": ">=1.9.3"
     },
     "require-dev": {
         "facade/ignition": "^1.4",
